# graphics_labs

./: CMakeLists.txt  cspell.json
images/: 09.rgba
include/: util.hpp
lab2/: CMakeLists.txt  main.cpp
lab2/idea/: Gasaev_lab2_iu9_42b.docx  Варианты2.docx
lab3/: CMakeLists.txt  main.cpp
lab3/idea/: Gasaev_lab3_iu9_42b.docx  Varianty.odt
lab4/: CMakeLists.txt  field.hpp  main.cpp
lab4/idea/: Gasaev_lab4_iu9_42b.docx  info.txt
lab5/: CMakeLists.txt  main.cpp
lab5/idea/: .~lock.Gasaev_lab2_iu9_42b.docx#  Gasaev_lab5_iu9_42b.docx  document.docx
lab6/: CMakeLists.txt  main.cpp
lab6/idea/: Gasaev_lab6_iu9_42b.docx  Varianty.docx  info
lab7/: CMakeLists.txt  basic.cpp  optimized.cpp
lab7/idea/: .~lock.Varianty.docx#  Gasaev_lab7_iu9_42b.docx
lab8/: CMakeLists.txt  main.cpp
lab8/idea/: Gasaev_lab8_iu9_42b.docx
lab8/shaders/: f_shader.glsl  v_shader.glsl
other/: list.txt  readme.md
